# skeleton

./: CMakeLists.txt  README.md  build.sh
app/: CMakeLists.txt  main.cpp
shared_library/: CMakeLists.txt
shared_library/include/shared_library/: fun.h
shared_library/src/: fun.cpp
shared_library/tests/: tests.cpp
tests/: tests.cpp
